--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "eslint-plugin-react": "^7.24.0",
+    "jshint": "^2.13.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
