--- a/fe/package.json
+++ b/fe/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "keeper-app-part-2-starting",
+  "name": "using-pre-built-react-components",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "eslint-plugin-react": "^7.24.0",
-    "jshint": "^2.13.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "material": "0.4.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
