--- a/be/package.json
+++ b/be/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.12",
     "validation": "0.0.1"
